# rust-canto

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
build_deps/: build_trie.rs  mod.rs  trie.rs
data/: README.md  chars.tsv  lettered.tsv  words.tsv
src/: lib.rs  token.rs  trie.rs  utils.rs  yale.rs
xtask/: Cargo.toml
xtask/src/: build_trie.rs  lib.rs  main.rs  trie.rs
