[package]
name = "rust-canto"
version = "0.3.0"
authors = ["Vincent Tam <https://github.com/VincentTam>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VincentTam/rust-canto"
repository = "https://github.com/VincentTam/rust-canto"
description = "Convert Chinese characters to Jyutping (粵拼)"
keywords = ["cantonese", "chinese", "hanzi", "jyutping", "yale"]
categories = ["text-processing"]
edition = "2021"

[lib]
name = "rust_canto"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
wasm-minimal-protocol = "0.1.0"
unicode-normalization = "0.1"
