[package]
name = "rust-canto"
version = "0.3.1"
authors = ["Vincent Tam <https://github.com/VincentTam>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VincentTam/rust-canto"
repository = "https://github.com/VincentTam/rust-canto"
description = "Convert Chinese characters to Jyutping (粵拼) / Yale romanization (耶魯)"
keywords = ["cantonese", "chinese", "hanzi", "jyutping", "yale"]
categories = ["text-processing"]
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Remove unwinding code
strip = true        # Remove symbols and debug info

[lib]
name = "rust_canto"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
wasm-minimal-protocol = "0.1.0"
unicode-normalization = "0.1"
