[workspace]
members = ["xtask"]

[package]
name = "rust-canto"
version = "0.3.2"
authors = ["Vincent Tam <https://github.com/VincentTam>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VincentTam/rust-canto"
repository = "https://github.com/VincentTam/rust-canto"
description = "Convert Chinese characters to Jyutping (粵拼) / Yale romanization (耶魯)"
keywords = ["cantonese", "chinese", "hanzi", "jyutping", "yale"]
categories = ["text-processing"]
edition = "2024"
build = "build.rs"
include = [
    "src/**/*.rs",
    "data/*.tsv",
    "xtask/**/*.rs",    # Include the xtask source!
    "xtask/Cargo.toml",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Remove unwinding code
strip = true        # Remove symbols and debug info

[lib]
name = "rust_canto"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
xtask = { path = "./xtask" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
zstd = "0.13.3"
postcard = { version = "1.1.3", features = ["use-std"] }
wasm-minimal-protocol = "0.1.0"
unicode-normalization = "0.1.25"
